<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.charge.todolist.account.SignUpActivity">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/to_do_list"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSignUpGmailBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:background="@drawable/box_bg"
        android:elevation="2dp"
        android:padding="7dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etSignUpPasswordBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:maxLength="30"
        android:background="@drawable/box_bg"
        android:elevation="2dp"
        android:padding="7dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpGmailBox"
        app:layout_constraintStart_toStartOf="@+id/etSignUpGmailBox"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpGmailBox" />
    <EditText
        android:id="@+id/etSignUpConformPasswordBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:maxLength="30"
        android:background="@drawable/box_bg"
        android:elevation="2dp"
        android:padding="7dp"
        android:hint="@string/conform_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpPasswordBox"
        app:layout_constraintStart_toStartOf="@+id/etSignUpPasswordBox"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpPasswordBox" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/blue_color"
        android:backgroundTint="@color/yellow_color"
        android:background="@drawable/box_bg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpConformPasswordBox"
        app:layout_constraintStart_toStartOf="@+id/etSignUpConformPasswordBox"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpLoginAccount"
        app:layout_constraintVertical_bias="0.76" />
    <TextView
        android:id="@+id/tvSignUpLoginAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpConformPasswordBox"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpConformPasswordBox" />
</androidx.constraintlayout.widget.ConstraintLayout>